# homelab-platform-apis

./: .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
.github/workflows/: bump-version.yml  commitizen-check.yml  release-xpkg.yml
apis/: crossplane.yaml
apis/ec2/: composition.yaml  xrd.yaml
apis/iam/: composition.yaml  xrd.yaml
apis/kms/: composition.yaml  xrd.yaml
apis/s3/: composition.yaml  xrd.yaml
apis/security-group/: composition.yaml  xrd.yaml
apis/stacks/stackiams3/: composition.yaml
examples/: claim-s3.yaml  claim-stackvm.yaml
meta/stacks/: stackiams3.stack.yaml  stackvm.stack.yaml
