[project]
name = "homelab-platform-apis"
version = "0.2.1"
description = "Crossplane XRDs and Compositions for homelab.crossplane.io"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.1"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "pyproject.toml:^version",
]
